# Intro-LLM-Apps-Langchain

./: .env.example  README.md  pyproject.toml  requirements.txt
Chapter_1/: chat_prompt.py  few_shoot.py  hugging_face.py  open_ai.py  prompt_template.py
Chapter_2/: react_intro.py  sequential_chains.py  tools_intro.py
Chapter_3/: char_splitter.py  csv_loader.py  docs_splitter.py  fifa_countries_audience.csv  html_loader.py  pdf_loader.py  rag_intro.py  recursive_splitter.py  white_house_executive_order_nov_2023.html
